--- a/7.EDA/LaptopPrice.ipynb
+++ b/7.EDA/LaptopPrice.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Number of independent variables\n",
+    "# No. of independent variables\n",
     " 1. Brand \n",
     " 2. Processor \n",
     " 3. RAM  \n",
